--- a/reloj/reloj-main/index.html
+++ b/reloj/reloj-main/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Reloj: Anagnórisis – Reconocimiento de los otros</title>
-
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.min.js"></script>
-
   </head>
 
   <body>
     <script src="sketch.js"></script>
   </body>
 </html>
+
