Actualizar títulos y mejorar la estructura de los archivos HTML y CSS en los ejercicios 2, 3 y 4

--- a/proyecto2/image_IA/EX3/index.html
+++ b/proyecto2/image_IA/EX3/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>3-Transformaciones espaciales lineales</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,14 +13,8 @@
   </head>
 
   <body>
-     <div class="wrap">
-    <main id="p5-container"></main>
-    <p class="note">
-      Mantén pulsada <strong>K</strong> para <em>detectar contornos</em> (Sobel).<br/>
-      Mantén pulsada <strong>D</strong> para <em>realzar contornos</em> (convolución de enfoque 3×3).<br/>
-      Suelta la tecla para volver a la imagen original.
-    </p>
-  </div>
     <script src="sketch.js"></script>
+    <h1>Proyecto 2 – EX 3 – Transformaciones espaciales lineales con p5.js</h1>
+
   </body>
 </html>
