--- a/proyecto2/image_IA/EX2/index.html
+++ b/proyecto2/image_IA/EX2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>2-Filtros con p5.js</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -13,7 +13,6 @@
 
   <body>
     <script src="sketch.js"></script>
-     <h1>Proyecto 2 – Filtros con p5.js</h1>
-    <div id="manual" class="manual"></div>
+     <h1>Proyecto 2 – EX 2 – Filtros con p5.js</h1>
   </body>
 </html>
