--- a/proyecto2/image_IA/EX4/index.html
+++ b/proyecto2/image_IA/EX4/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+        <title>2-Transformación con p5.js</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -14,5 +14,6 @@
 
   <body>
     <script src="sketch.js"></script>
+    <h1>Proyecto 2 – EX 4 – Transformaciones con p5.js</h1>
   </body>
 </html>
